Fixed overflow bug

--- a/css/style.sass
+++ b/css/style.sass
@@ -26,7 +26,7 @@ html
       size: 18px
     margin: 0px
     height: 100%
-    max-width: 100%
+    width: 100%
     overflow-x: hidden
 
     button
@@ -121,6 +121,7 @@ html
 
           .image-container
             min-height: inherit
+            overflow: hidden
             @media screen and (max-width: $breakpoint-content) 
               width: 100%
 
